# scholar-slack-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  add_authors_batch.sh  fetch_and_send.sh  fetch_scholar.py  gui.py  helper_funcs.py  log_config.py  main.py  migrate_cache.py  pyproject.toml  requirements.txt  settings.json  slack_bot.py  streams_funcs.py
.github/workflows/: ci.yml  tests.yml
data/: settings.json  slack-example.config
scholar_slack_bot/: fetch_scholar.py  helper_funcs.py  log_config.py  main.py  slack_bot.py  streams_funcs.py
scripts/: add_authors_batch.sh  common.sh  fetch_and_send.sh  run_gui.sh
src/: authors.db  authors.json  authors_short.json  publications.db  slack-example.config
src/googleapi_cache/: -SBe4c0AAAAJ.json  -c9whrAAAAAJ.json  0-LZmbcAAAAJ.json  07tNFdgAAAAJ.json  134XbMkAAAAJ.json  1gdhFFMAAAAJ.json  1pwyaYgAAAAJ.json  2Dd5uoIAAAAJ.json  2VgRQOEAAAAJ.json  3HbeiywAAAAJ.json  4kETHY4AAAAJ.json  5z1S51MAAAAJ.json  6MjMhT4AAAAJ.json  6dfA060AAAAJ.json  ABM0fgcAAAAJ.json  CL7jAd8AAAAJ.json  Cg9yFBQAAAAJ.json  ECBBsv8AAAAJ.json  Eo6JfS8AAAAJ.json  FNhl50sAAAAJ.json  FS0s6WYAAAAJ.json  JXcWFkgAAAAJ.json  JXtOJyAAAAAJ.json  MG9cVagAAAAJ.json  MPFzJQgAAAAJ.json  Nds56VgAAAAJ.json  Oo4ElF4AAAAJ.json  P_3rGrsAAAAJ.json  Q-n9_FgAAAAJ.json  QxV9vroAAAAJ.json  RTtshYYAAAAJ.json  RiZ-RdwAAAAJ&hl.json  RiZ-RdwAAAAJ.json  (+46 more)
tests/: README.md  conftest.py  test_cache.py  test_cli.py  test_fetch.py  test_fetch_scholar.py  test_formatting.py  test_helper_funcs.py  test_main.py  test_slack.py  test_slack_bot.py
(+23 files in other folders)
